# zafafworld.net

./: .env  .env.example  .gitignore  Master_System_Design_Document.md  README.md  audit_media.py  cleanup.sql  cleanup_minio.sh  db_keys.txt  gallery_keys.txt  minio_json.txt  minio_keys.txt  package.json  podman-compose.yml  restore_log.txt  strip_tx.py  test_e2e.js  test_e2e.sh  tune-system.sh  validate_db.sh  zafaf_prod_migration.sql
backend-rust/: Cargo.toml  Containerfile  build.rs  schema_only.sql
backend-rust/.sqlx/: query-01ccc7a5424b24a0810c7939ea5754362a67cc23243de5902bce7f9b2e654354.json  query-054a1951210784ebaf2466fee0a8018014ead267088612ab201efb76f127e36f.json  query-07ecf5ed55ca021ced11bd09ac0280bf356db1cd188302b978a38b491f911471.json  query-0a1baef8d2edd340da61ebb72842de2c5a90015f8b49df70c9ff92e2c7c03e2f.json  query-0ac184e6369e127e5dc4e371ed766ea00d5add54236503e01e9f1472b6075496.json  query-0e00f3915adb680810ad0b072615adb54783bf4123e22bf3579ded0d1492ac8f.json  query-107783e187ecf07473dd3f9c70cb549b4e1bdda17004fae3e6e06124299cd78a.json  query-126b588426b5cfd1bb4b8d482649eed38952593c9bb1fbda9fc55f6adc284e4e.json  query-13688270bb6e4e15b469823b3cfe9955e85d6addc6ff0eca9b15183382505957.json  query-181f768eecde28d803b35441a2312403780bd874a4132c6da5b258a659fd443d.json  query-1db1f8ef98e256d9fff22676bd897f633becf6a79b44f41ecc20df5c9c237522.json  query-1e16ff549e764491e1e2cb22c1942fa76908508022a642b5cf2e529d6216cb1d.json  query-218e5c6014712287b073b25f67a30f5ff58da9dcaa313935c3d18c0e913b541c.json  query-232e1fe7ff87635c2bbd6d7f54ad7de98abf3ed0a5854c5693d6ee703b788323.json  query-272ebe0cf9342d1b982b4e7e83ed7f182dabef36c845a46668ac84651631fb0f.json  query-2a78316b999126996907fc827fc8899ddc014e07252ae08a92b73f208cc1becb.json  query-2eebedef3bbed9ef91947f1c9da9b246b6974d610fbc47e84b3ac86955b1a8e9.json  query-31029bfa246ad4a920d2ea5a1895ece6794dc5e9cc0d2230e975261d909381ba.json  query-37715849983aa0c9b4f020f33a73542c09c3aada6005ce5239df1196c9329134.json  query-3dddd7b28fbc21858854864d6d5ab303bf5fa6be97d5d2df6ba9deceb3e083f6.json  query-41354540cd8ef56382c7e98d8b3cea46b859e6740ede906b091235ccd44454da.json  query-42f225c5462e25a626be1e7dc3e90d5b0b0df0b8c71267caa346421856338be5.json  query-449dde30031832032b956427f47df2a6614069709ca623ff5d87a856460d0b9e.json  query-482623d51b1994db39c12408d44898a7c6cbb5a376bbfc750ed3e3bb6134531d.json  query-4b027293f3227df8aa23b1df36e513fea5a95edcb4ddfb67fd2e3fd1d8ed8993.json  query-4f8d30246047a9c9348614b0f65b26e1dcfc425e9c82d276a2d4b2750de288d1.json  query-53fd9c1db226e69d059d86a6eaf7f2560a8bc019c2b55129339d283ebaaf9e79.json  query-540177223362d377e4c29d8cac8ec6a88c3d96dfba923c2c6b9ffebb910fe126.json  query-54feb1e812c889f348e09494198f1f748040fb5f3ff5434918af89e8cd0a7f2b.json  query-59a30544810f2ed304fd777592f2a40828d5eb9b3cfe39806e8a285365391fd2.json  query-5d6ee9212513457d40d416d566564c743251f45a7172644147f5b5296eec9248.json  query-60aca339587787855760c4bc3dacb0300ba2f97dfff2c9e17ce1d071d0cde1b7.json  query-761c30f75aaf1aceb8e0ce60bdd042f29ce5669901d7ffbc8079342bdb7efbe3.json  (+37 more)
(+910 files in other folders)
