[package]
name = "backend-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37.0", features = ["full", "macros", "rt-multi-thread"] }
axum = { version = "0.7.5", features = ["macros", "multipart", "ws"] }
tower-http = { version = "0.5.2", features = ["cors", "trace", "fs", "catch-panic", "timeout"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid", "rust_decimal"] }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
jsonwebtoken = "9.3.0"
bcrypt = "0.15.1"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
chrono = { version = "0.4.38", features = ["serde"] }
dotenvy = "0.15.7"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json", "env-filter"] }
cookie = "0.18.0"
time = "=0.3.51"
async-stream = "0.3.6"
tokio-stream = "0.1.18"
futures-util = "0.3.30"
dashmap = "5.5.3"
reqwest = { version = "0.12.4", features = ["json"] }
rust_decimal = { version = "1.35.0", features = ["db-postgres", "serde-with-float"] }
rust_decimal_macros = "1.35.0"
# UDS accept loop for axum 0.7 (axum::serve is TCP-only; hyper-util provides
# the TowerToHyperService adapter and connection handling for Unix streams).
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio", "server", "server-auto"] }
tower = { version = "0.4", features = ["util"] }
sha2 = "0.10.8"
lettre = { version = "0.11", features = ["tokio1", "tokio1-rustls-tls", "builder", "smtp-transport"], default-features = false }
validator = { version = "0.20.0", features = ["derive"] }
infer = "0.19.0"
image = { version = "0.25.10", features = ["webp"] }
webp = "0.3.0"
tokio-util = { version = "0.7.18", features = ["io"] }
md5 = "0.8.0"
ammonia = "4.1.3"
rust-s3 = { version = "0.34.0", default-features = false, features = ["tokio-rustls-tls"] }
percent-encoding = "2.3.2"

[profile.release]
# Link-Time Optimization: merges all codegen units at link time for maximum
# inlining and dead-code elimination. Adds ~30s to release build time but
# typically yields 5-15% smaller binary and faster critical paths.
lto = true

# Single codegen unit: required for full LTO; also produces the most optimal
# code layout (LLVM can see the entire program at once).
codegen-units = 1

# Strip debug symbols from the final binary. Reduces binary size by ~60%
# with zero runtime cost. Use `RUST_BACKTRACE=1` in staging if you need
# backtraces (they still work when DWARF is stripped on Linux via debuginfod).
strip = true

# Panic strategy: unwind (NOT abort). Unwind is required so that
# tower-http's CatchPanicLayer can intercept panics and convert them
# to 500 JSON responses rather than crashing the process. Switching to
# abort would silence the tower catch layer and hard-crash on any panic.
panic = "unwind"

# Optimize for speed (default is already 3, but explicit for clarity).
opt-level = 3
